--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p id="content"></p>
+    <p id="second-content"></p>
     <script src="js/script.js"></script>
 </body>
 </html>
